--- a/index.css
+++ b/index.css
@@ -1,8 +1,19 @@
+:root {
+  font-size: 16px;
+}
+
 body {
   height: 100%;
-  background: linear-gradient(to right bottom, #052937, #003e4c, #005454, #00694f, #067d3d)
+  background: #002727;
+  background: -webkit-linear-gradient(
+      to right bottom,
+      #061d1e,
+      #002727,
+      #012312
+    )
     no-repeat center center fixed;
-  background-color: #111316;
+  background: linear-gradient(to right bottom, #061d1e, #002727, #012312)
+    no-repeat center center fixed;
   background-size: cover;
   color: #fff;
   font-family: Montserrat, sans-serif;
@@ -15,16 +26,17 @@ body {
   max-width: 60%;
 }
 
+p {
+  margin: 1rem 0;
+  line-height: 1.75;
+}
+
 a {
   color: white;
   text-decoration: none;
   border-bottom: 1px solid #ccc;
 }
 
-#findMe {
-  font-size: 0.8rem;
-}
-
 #letsTalk {
-  font-size: 1.2rem;
+  font-size: 1.25rem;
 }
